<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#ffefebe7"
    >
    
    <LinearLayout
        android:id="@+id/ll_index"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:paddingTop="5dip"
        >
		
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" 
	        android:background="@drawable/more_item_press"
	        android:clickable="true"
	        android:id="@+id/ll_petInfo_head"
	        >
        
	        <ImageView
	            android:id="@+id/headPic_pet"
	            android:layout_width="100dip"
	            android:layout_height="100dip"
	            android:layout_marginLeft="15dip"
	            android:src="@drawable/ic_launcher" 
	            android:background="@drawable/ic_more_item_default1"
	            />
	
	        <TextView
	            android:id="@+id/name_pet"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:gravity="center_horizontal"
	            android:layout_weight="1"
	            android:paddingLeft="15dip"
	            android:text="@string/petName" 
	            />
        </LinearLayout>
    </LinearLayout>
    
    <!-- 如果添加的项目很多的话 就希望能上下滑动查看 -->
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        android:layout_below="@+id/ll_index"
        >
        <!-- 总体用线性布局 -->
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="60.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="10.0dip"
            >
            <!-- 宠物信息 一栏 -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:clickable="true"
                android:id="@+id/ll_petInfo"
                >
                <TableLayout
                    android:id="@+id/MorePageTableLayout_Favorite"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="0"
                    android:stretchColumns="0" >

                    <TableRow
                        android:id="@+id/more_page_row0"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/more_item_press"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="8.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/petInfo_petActivity"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:id="@+id/petInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="20.0dip"
                            android:src="@drawable/ic_arrow" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
            
            <!-- 中间分割开来   我是华丽丽的分割线 -->
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_marginBottom="15dip"
                />
            
            <!-- 宠物图集一栏 -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
				android:clickable="true"
				android:id="@+id/ll_petPics"
                >
                <TableLayout
                    android:id="@+id/MorePageTableLayout_Favorite1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="0"
                    android:stretchColumns="0" >

                    <TableRow
                        android:id="@+id/more_page_row1"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/more_item_press"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="8.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/petGallery_petActivity"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:id="@+id/petGallery"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="20.0dip"
                            android:src="@drawable/ic_arrow" 
                            />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
            
             <!-- 中间分割开来   我是华丽丽的分割线 -->
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_marginBottom="15dip"
                />
            
            <!-- 宠物查询一栏 -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:clickable="true"
                android:id="@+id/ll_petSearch"
                >
                <TableLayout
                    android:id="@+id/MorePageTableLayout_Favorite2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="0"
                    android:stretchColumns="0" >

                    <TableRow
                        android:id="@+id/more_page_row2"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/more_item_press"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="8.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/petSearch_petActivity"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:id="@+id/petSearch"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="20.0dip"
                            android:src="@drawable/ic_arrow" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
            
        </LinearLayout>
        
    </ScrollView>

</RelativeLayout>
